--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "ts-node examples.ts",
     "test": "mocha --require ts-node/register tests.ts",
-    "perf": "ts-node performance.ts"
+    "perf": "ts-node --max_old_space_size=8192 performance.ts"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.44",
