--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@types/mocha": "^2.2.44",
+    "chai": "^4.1.2",
     "immutable": "^3.8.2",
     "mocha": "^4.0.1",
     "ts-node": "^3.3.0",
