--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chai": "^4.1.2",
     "immutable": "^3.8.2",
     "mocha": "^4.0.1",
+    "seamless-immutable": "^7.1.2",
     "ts-node": "^3.3.0",
     "typescript": "^2.5.3"
   }
